--- a/css/style.css
+++ b/css/style.css
@@ -32,9 +32,14 @@ h3{
     background-color: rgba(226, 223, 223, 0.562);
 }
 
+/* Botonera I */
 
+.botoneraI{
+    height: 34px;
 
-/* botonera */
+}
+
+/* botonera II */
 
 
 .botonera__bg{
