--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,5 +1,15 @@
-//backgrounds
 
-$mainColor: rgba(190, 198, 202, 0.767);
+//colores
 
-$secondaryColor:rgba(190, 198, 202, 0.521);
+$mainColor:  rgba(190, 198, 202, 0.767);
+$secondaryColor: rgba(190, 198, 202, 0.521);
+$blackColor: rgb(52, 52, 53);
+$lightColor: rgb(255, 255, 255);
+
+//sizies
+
+$fontXl: 1.5em;
+
+$fontL: 1.2em;
+
+$fontM: 1em;
