--- a/css/style.css
+++ b/css/style.css
@@ -34,22 +34,68 @@ h3 {
   background-color: rgba(190, 198, 202, 0.767);
   height: 80px;
 }
-.botonera__bg #botonera ul li a {
-  color: rgb(49, 49, 56);
+
+#botonera a {
+  color: rgb(52, 52, 53);
   font-size: 1.2em;
 }
-.botonera__bg #botonera ul li a:hover {
-  color: rgb(248, 245, 245);
+#botonera a:hover {
+  color: rgb(255, 255, 255);
   transition: 0.5s;
 }
 
 .nav-img {
   width: 85px;
 }
-.nav-img .nav-img:hover {
+.nav-img:hover {
   filter: invert(100%);
   cursor: pointer;
   transition: 0.5s;
+}
+
+/* footer */
+.flex {
+  display: flex;
+}
+
+.justify-content {
+  justify-content: space-between;
+}
+
+.aligne-items {
+  align-items: center;
+}
+
+.botonera__lista {
+  text-decoration: none;
+  list-style: none;
+  padding-top: 20px;
+  color: rgb(52, 52, 53);
+  font-size: 1em;
+}
+.botonera__lista a {
+  color: rgb(52, 52, 53);
+}
+.botonera__lista a:hover {
+  color: rgb(255, 255, 255);
+}
+
+/* boton contacto */
+.boton {
+  width: 100px;
+  height: 30px;
+  border: none;
+  padding: 0.5%;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  background: linear-gradient(to right, rgb(236, 157, 236), rgb(134, 7, 134));
+  border-radius: 4px;
+}
+.boton:hover {
+  background: linear-gradient(to right, rgb(134, 7, 134), rgb(236, 157, 236));
+  cursor: pointer;
+  transition: 0.9s;
 }
 
 /*# sourceMappingURL=style.css.map */
