--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,7 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap');
+
+@import "_vars";
 @import "_textos";
 @import "_headers";
 @import "_botoneras"; 
-@import "_vars"
