--- a/scss/_botoneras.scss
+++ b/scss/_botoneras.scss
@@ -65,7 +65,7 @@
     a{
         color:$blackColor;
         &:hover{
-            color: $lightColor;
+            color: $mainColor;
         }
     }
 
