--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -4,7 +4,7 @@
 $mainColor:  rgba(190, 198, 202, 0.767);
 $secondaryColor: rgba(190, 198, 202, 0.521);
 $blackColor: rgb(52, 52, 53);
-$lightColor: rgb(255, 255, 255);
+$lightColor: rgb(122, 120, 120);
 
 //sizies
 
@@ -13,3 +13,7 @@ $fontXl: 1.5em;
 $fontL: 1.2em;
 
 $fontM: 1em;
+
+$headerWidth: 100%;
+
+$headerHeight: 80vh;
