--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,104 @@ h3 {
   font-size: 1em;
 }
 
+.texto-claro {
+  color: rgb(134, 134, 134);
+  font-size: 1em;
+}
+
+.text__center {
+  text-align: center;
+  margin: 20px 30px 20px 30px;
+}
+
+.text__left {
+  text-align: left;
+  margin: 0px 50px 20px 50px;
+}
+
+.main__texto--m {
+  font-size: 1em;
+  margin-bottom: 10px;
+  color: rgb(122, 120, 120);
+}
+
+@keyframes headerAnimate {
+  0% {
+    background-image: url(../img/fotos/animacion1.webp);
+  }
+  25% {
+    background-image: url(../img/fotos/animacion2.webp);
+  }
+  50% {
+    background-image: url(../img/fotos/animacion3.webp);
+  }
+  75% {
+    background-image: url(../img/fotos/animacion4.webp);
+  }
+  100% {
+    background-image: url(../img/fotos/animacion5.webp);
+  }
+}
+.encabezado {
+  width: 110%;
+  height: 40vh;
+  background-size: cover;
+  animation-name: headerAnimate;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+}
+
+@media (min-width: 992px) {
+  .encabezado {
+    width: 100%;
+    height: 80vh;
+  }
+}
+.header__biografia, .header__contacto, .header__indumentaria, .header__entrenamientos {
+  background-image: url(../img/fotos/headerBiografia.webp);
+  width: 110%;
+  height: 40vh;
+  background-size: cover;
+  opacity: 0.9;
+}
+
+@media (min-width: 992px) {
+  .header__biografia, .header__contacto, .header__indumentaria, .header__entrenamientos {
+    width: 100%;
+    height: 80vh;
+  }
+}
+.header__entrenamientos {
+  background-image: url(../img/fotos/headerEntrenamientos.webp);
+}
+
+@media (min-width: 992px) {
+  .header__entrenamientos {
+    width: 100%;
+    height: 80vh;
+  }
+}
+.header__indumentaria {
+  background-image: url(../img/fotos/frontal.jpg);
+}
+
+@media (min-width: 992px) {
+  .header__indumentaria {
+    width: 100%;
+    height: 80vh;
+    background-position: center;
+  }
+}
+.header__contacto {
+  background-image: url(../img/fotos/entrandoalringgrande.jpg);
+}
+
+@media (min-width: 992px) {
+  .header__contacto {
+    width: 100%;
+    height: 80vh;
+  }
+}
 .botoneraI {
   height: 36px;
 }
@@ -40,7 +138,7 @@ h3 {
   font-size: 1.2em;
 }
 #botonera a:hover {
-  color: rgb(255, 255, 255);
+  color: rgb(122, 120, 120);
   transition: 0.5s;
 }
 
@@ -77,7 +175,7 @@ h3 {
   color: rgb(52, 52, 53);
 }
 .botonera__lista a:hover {
-  color: rgb(255, 255, 255);
+  color: rgba(190, 198, 202, 0.767);
 }
 
 /* boton contacto */
@@ -96,6 +194,90 @@ h3 {
   background: linear-gradient(to right, rgb(134, 7, 134), rgb(236, 157, 236));
   cursor: pointer;
   transition: 0.9s;
+}
+
+.img-center {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+.card-img {
+  width: 100px;
+  padding: 5%;
+}
+
+/*==== Dinamismo===== */
+/* cards */
+/* kick boxeo funcional */
+.card__container {
+  width: 415px;
+  overflow: hidden;
+}
+
+@media (min-width: 992px) {
+  .cards:hover img {
+    transition: all 1s;
+    filter: grayscale(80%);
+    -webkit-transform: scale(1.3);
+    transform: scale(1.3);
+  }
+}
+.form-register {
+  width: 300px;
+  background: linear-gradient(to right, rgb(236, 157, 236), rgb(134, 7, 134));
+  padding: 20px;
+  margin: auto;
+  font-size: 1em;
+}
+
+/* GRIDS contacto */
+#contenedor-grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(8, auto);
+  grid-template-areas: "botoneraI" "botoneraII" "header__contacto" "titulo" "blockI" "blockII" "mapa" "footer";
+}
+
+@media (min-width: 1024px) {
+  #contenedor-grid {
+    grid-template-columns: repeat(2, 50%);
+    grid-template-rows: repeat(7, auto);
+    grid-template-areas: "botoneraI botoneraI" "botoneraII botoneraII" "header__contacto header__contacto" "titulo titulo" "blockI blockI" "blockII mapa" "footer footer";
+  }
+}
+/* grid areas contacto */
+.botoneraI {
+  grid-area: botoneraI;
+}
+
+.botoneraII {
+  grid-area: botoneraII;
+}
+
+.header__contacto {
+  grid-area: header__contacto;
+  width: 100%;
+}
+
+.titulo {
+  grid-area: titulo;
+}
+
+.blockI {
+  grid-area: blockI;
+}
+
+.blockII {
+  grid-area: blockII;
+}
+
+.mapa {
+  grid-area: mapa;
+}
+
+.footer {
+  grid-area: footer;
 }
 
 /*# sourceMappingURL=style.css.map */
