--- a/scss/_textos.scss
+++ b/scss/_textos.scss
@@ -1,7 +1,5 @@
 //background
 
-
-
 .bg-gray{
     background-color:$secondaryColor;
 }
@@ -29,3 +27,24 @@ h2{
 h3{
     font-size: $fontM;
 }
+
+.texto-claro{
+    color: rgb(134, 134, 134);
+    font-size: $fontM;
+}
+
+.text__center{
+    text-align: center;
+    margin: 20px 30px 20px 30px;
+}
+.text__left{
+    text-align: left;
+    margin: 0px 50px 20px 50px;
+}
+
+.main__texto--m{
+    font-size: $fontM;
+    margin-bottom: 10px;
+    color: $lightColor;
+}
+
