--- a/scss/_botoneras.scss
+++ b/scss/_botoneras.scss
@@ -55,12 +55,11 @@
 }
 
 .botonera__lista{
-
     text-decoration: none;
     list-style: none;
     padding-top: 20px;
     color: $blackColor;
-    font-size: $fontM;
+    font-size: 1em;
 
     a{
         color:$blackColor;
