--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IM+Fell+Great+Primer&family=Poppins:wght@200;300;400&family=Raleway:ital,wght@1,200&display=swap");
 .bg-gray {
   background-color: rgba(190, 198, 202, 0.521);
 }
@@ -9,21 +9,33 @@
 
 h1 {
   color: rgb(39, 119, 173);
-  font-size: 1.5em;
+  font-size: 2.5em;
 }
 
 h2 {
   color: rgb(158, 34, 142);
-  font-size: 1.2em;
+  font-size: 2em;
 }
 
 h3 {
-  font-size: 1em;
+  font-size: 1.3em;
 }
 
+h4, .textoXl {
+  font-size: 2.5em;
+  color: rgb(255, 255, 255);
+  font-family: "IM Fell Great Primer", serif;
+  -webkit-text-stroke: 0.2px rgb(0, 0, 0);
+}
+
+@media (min-width: 992px) {
+  h4, .textoXl {
+    font-size: 9em;
+  }
+}
 .texto-claro {
   color: rgb(134, 134, 134);
-  font-size: 1em;
+  font-size: 1.3em;
 }
 
 .text__center {
@@ -37,11 +49,28 @@ h3 {
 }
 
 .main__texto--m {
-  font-size: 1em;
+  font-size: 1.3em;
   margin-bottom: 10px;
   color: rgb(122, 120, 120);
 }
 
+.p-center {
+  padding: 10px 20px 10px 20px;
+}
+
+.textoXl {
+  font-size: 1.3em;
+  text-align: center;
+  padding-right: 80px;
+  font-family: "Raleway", sans-serif;
+  -webkit-transform: rotate(0deg);
+}
+
+@media (min-width: 992px) {
+  .textoXl {
+    padding-right: 500px;
+  }
+}
 @keyframes headerAnimate {
   0% {
     background-image: url(../img/fotos/animacion1.webp);
@@ -60,7 +89,7 @@ h3 {
   }
 }
 .encabezado {
-  width: 110%;
+  width: 100%;
   height: 40vh;
   background-size: cover;
   animation-name: headerAnimate;
@@ -221,6 +250,26 @@ h3 {
     filter: grayscale(80%);
     -webkit-transform: scale(1.3);
     transform: scale(1.3);
+  }
+}
+.imgFondo {
+  background-image: url(../img/fotos/imgFondo.webp);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 80vh;
+  width: 100%;
+  height: 50vh;
+  background-position: center;
+  filter: grayscale(0.8);
+  overflow: scroll;
+}
+
+@media (min-width: 992px) {
+  .imgFondo {
+    background-image: url(../img/fotos/imgFondo.webp);
+    background-attachment: fixed;
+    height: 80vh;
+    overflow: hidden;
   }
 }
 .form-register {
