--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,4 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IM+Fell+Great+Primer&family=Poppins:wght@200;300;400&family=Raleway:ital,wght@1,200&display=swap');
 
 @import "_vars";
 @import "_textos";
