--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=IM+Fell+Great+Primer&family=Poppins:wght@200;300;400&family=Raleway:ital,wght@1,200&display=swap');
 
 @import "_vars";
+@import "../node_modules/bootstrap/scss/bootstrap";
 @import "_textos";
 @import "_headers";
 @import "_botoneras"; 
